	* Fixed Bug #585528: 'Move the server and app to separate processes'.
	* Fixed Bug #597053: 'Failed builds should show in the browser'.
	* Fixed Bug #590977: 'Server is always old version RootinTootin_0.1'.
	* Fixed Bug #597049: '404 pages do not show in Chrome'.
	* Fixed Bug #586631: 'Rebuilding is too slow'.
	* Fixed Bug #598700: 'The server needs to show unhandled exceptions'.

2010-03-02 Release 0.4.0
	* Fixed bug #511025: 'Controller template uses wrong view on create fail'.
	* Fixed bug #509711: 'Decimal datatype has zero precision'.
	* Fixed bug #509707: 'Decimal database type mapped to D double'.
	* Fixed bug #514143: 'Annoying obsolete FIXME in the routes'.
	* Fixed bug #513483: 'routes use zero-or-more instead of one-or-more'.
	* Fixed bug #510452: 'Requests for files do not show in server output'.
	* Fixed bug #510450: 'The unknown controller 404 page uses the wrong content type'.
	* Fixed bug #511027: 'Validation is missing in generated crud'.
	* Fixed bug #510488: 'html is dropped on create and update'.

2010-01-19  Release 0.3.0
	* Actions can be rendered in html, json, or xml.
	* Routes are more RESTful and use regular expressions.
	* Models can be converted to json and xml via their to_json & to_xml methods.
	* Views can use the link_to function to render links.
	* The './gen create scaffolding' now gives model fields default values, instead of null.
	* The './gen create scaffolding' now gives each field a proper html control, instead of a textbox.
	* The './gen create scaffolding' now only allows valid field types.
	* The server now rebuilds only when files under the app dir change, instead of any file changing.
	* Templates now use <%= for print with escape, and <%# for just print.
	* The web server now returns 'building ...' while compiling.
	* The'./gen recreate database' command recreates a database.
	* Fixed bug #503179: 'DB data is not formatted correctly when rendered'.