@@ -18,15 +18,28 @@ size_t c_create_key(char* name) {
 	return ftok(name, 'S');
 }
 
+key_t ftok_check (char *name, int index) {
+	key_t temp;
+
+	temp = ftok (name, index);
+	if (temp == (key_t) - 1) {
+		exit (1);
+	}
+	return temp;
+}
+
+
 int c_shm_open(size_t key, size_t buffer_size) {
+	key_t mykey = ftok_check("server", 1);
+
 	// Create a new memory block
-	int shmid = shmget(key, buffer_size, IPC_CREAT | IPC_EXCL | 0666);
+	int shmid = shmget(mykey, buffer_size, 0777 | IPC_CREAT);
 	if(shmid != -1) {
 		return shmid;
 	}
 
 	// If that failed, use the existing memory block
-	shmid = shmget(key, buffer_size, 0);
+	shmid = shmget(mykey, buffer_size, 0);
 	if(shmid == -1) {
 //		perror("shmget");
 //		exit(1);
