@@ -11,6 +11,7 @@
 	* Fixed Bug #597049: '404 pages do not show in Chrome'.
 	* Fixed Bug #586631: 'Rebuilding is too slow'.
 	* Fixed Bug #598700: 'The server needs to show unhandled exceptions'.
+	* Fixed Bug #598609: 'Large responses break the server'.
 
 2010-03-02 Release 0.4.0
 	* Fixed bug #511025: 'Controller template uses wrong view on create fail'.
